commit lan 2_logic_header_fetchApiUser

--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -71,3 +71,26 @@
     font-size: 1.4rem;
     color: rgba(22, 24, 35, 0.5);
 }
+
+// animations loading
+.loading {
+    animation: spinner 0.8s linear infinite;
+}
+
+@keyframes spinner {
+    0% {
+        transform: translateY(-50%) rotate(0);
+    }
+    25% {
+        transform: translateY(-50%) rotate(90deg);
+    }
+    50% {
+        transform: translateY(-50%) rotate(180deg);
+    }
+    75% {
+        transform: translateY(-50%) rotate(270deg);
+    }
+    100% {
+        transform: translateY(-50%) rotate(360deg);
+    }
+}
