--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     padding: 9px 16px;
     min-width: 100px;
+    font-family: var(--font-family);
     font-weight: 700;
     font-size: 1.6rem;
     text-align: center;
