--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -11,6 +11,9 @@
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
     --default-layout-horizontal-spacer: 24px;
+
+    // font
+    --font-family: 'TikTokFont', sans-serif;
 }
 
 * {
@@ -25,7 +28,7 @@ html {
 
 body {
     // font-family: 'Montserrat', sans-serif;
-    font-family: 'TikTokFont', sans-serif;
+    font-family: var(--font-family);
     font-size: 1.2rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
