--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -11,6 +11,7 @@
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px;
     display: flex;
     justify-content: center;
+    font-family: var(--font-family);
 }
 
 .inner {
@@ -20,6 +21,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 var(--default-layout-horizontal-spacer);
+}
+
+.logo-brand {
+    display: flex;
 }
 
 .more-btn {
