--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -16,6 +16,7 @@
         flex: 1;
         height: 100%;
         color: var(--black);
+        font-family: var(--font-family);
         font-size: 1.6rem;
         caret-color: var(--primary);
         background-color: transparent;
