tái cấu trúc code header

--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -3,6 +3,10 @@
     margin-top: 5px;
 }
 
+.menu-body {
+    overflow-y: auto;
+}
+
 .wrapper {
     height: 41px;
     padding: 10px 8px 10px 16px;
@@ -37,6 +41,7 @@
 .header {
     display: flex;
     height: 50px;
+    flex-shrink: 0;
 
     & > .header-title {
         font-size: 1.7rem;
