--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -7,11 +7,16 @@
 
     width: 100%;
     height: var(--default-layout-header-height, 60px);
-    border: 1px solid #ccc;
+    // border: 1px solid #ccc;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px;
     display: flex;
     justify-content: center;
     font-family: var(--font-family);
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: white;
+    z-index: 10;
 }
 
 .inner {
