--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -9,6 +9,7 @@
     min-height: 1000px;
     display: flex;
     padding: 0 var(--default-layout-horizontal-spacer);
+    padding-top: var(--default-layout-header-height);
 }
 
 .content {
