--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -26,29 +26,14 @@ html {
     font-size: 62.5%;
 }
 
-html ::-webkit-scrollbar {
-    border-radius: 0px;
-    width: 5px;
-}
-
 html *::-webkit-scrollbar {
     border-radius: 0;
     width: 5px;
 }
 
-html ::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(22, 24, 35, 0.06);
-}
-
 html *::-webkit-scrollbar-thumb {
     border-radius: 4px;
     background-color: rgba(22, 24, 35, 0.06);
-}
-
-html ::-webkit-scrollbar-track {
-    border-radius: 0px;
-    background-color: rgba(0, 0, 0, 0);
 }
 
 html *::-webkit-scrollbar-track {
@@ -73,7 +58,8 @@ input,
     outline: none;
 }
 
-a[href] {
+a {
+    color: var(--text-color);
     text-decoration: none;
 }
 
