--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -20,6 +20,7 @@
         font-size: 1.6rem;
         caret-color: var(--primary);
         background-color: transparent;
+        padding-right: 40px;
     }
 
     input:not(:placeholder-shown) ~ .search-btn {
