commit homepage following ui and logic of them

--- a/src/layouts/components/Sidebar/Sidebar.module.scss
+++ b/src/layouts/components/Sidebar/Sidebar.module.scss
@@ -1,4 +1,14 @@
 .wrapper {
-    width: 356px;
+    width: var(--default-layout-sidebar-width);
     margin-left: -10px;
+    position: fixed;
+    bottom: 0;
+    top: var(--default-layout-header-height);
+    overflow: hidden;
+
+    &:hover {
+        overflow-y: scroll;
+        overflow-x: visible;
+        overscroll-behavior-y: contain;
+    }
 }
