--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -11,6 +11,7 @@
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
     --default-layout-horizontal-spacer: 24px;
+    --default-layout-sidebar-width: 356px;
 
     // font
     --font-family: 'TikTokFont', sans-serif;
@@ -28,7 +29,7 @@ html {
 
 html *::-webkit-scrollbar {
     border-radius: 0;
-    width: 5px;
+    width: 8px;
 }
 
 html *::-webkit-scrollbar-thumb {
