--- a/src/layouts/components/Sidebar/Menu/Menu.module.scss
+++ b/src/layouts/components/Sidebar/Menu/Menu.module.scss
@@ -1,5 +1,5 @@
 .menu {
-    padding: 20px 0 26px 0;
+    padding: 20px 0 20px 0;
 }
 
 .menu-item {
@@ -17,7 +17,7 @@
         }
 
         .active-icon {
-            display: flex;
+            display: inline-block;
         }
     }
 
